<resources>
    <string name="app_name">Flash Checkbook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Checking!!</string>
    <string name="menu_account">Accounts</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_transaction_editor">Add Transaction</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="enter_transaction_details">Enter transaction details</string>
    <string name="action_add_sample_data">Add Sample Data</string>
    <string name="action_delete_sample_data">Delete Sample Data</string>
    <string name="new_transaction">New Transaction</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="enter_amount">Enter amount</string>
    <string name="enter_date">Enter date</string>
    <string name="delete_account">Delete Transaction</string>

    <string-array name="countries_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        ...
    </string-array>

    <string name="number_10_digits_warning">The number field cannot contain more than 10 digits. Please revise and try again.</string>
    <string name="enter_category">Enter category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="transaction_header">Transactions</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Enable Decimal Separator</string>
    <string name="attachment_title">Enable Predictive Category Selection</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">When a Payee exists, the last used Category is saved. When enabled, this setting will pull the most recent Category name into a transaction, based upon the entered Payee name.</string>
    <string name="enter_account_name">Enter account name</string>
    <string name="enter_account_starting_date">Enter account starting date</string>
    <string name="enter_account_starting_balance">Enter account starting balance</string>
    <string name="new_account">New account</string>
    <string name="edit_account">Edit Account</string>
    <string name="title_activity_account">Accounts</string>
    <string name="title_activity_account_editor">Account Editor</string>
    <string name="welcome_to_flash_checkbook">Welcome to Flash Checkbook! It appears you are using the app for the first time. Congratulations to you! In order to proceed, you need to add at least one account to track, usually a checking account. Click the button below to proceed - you can add or remove accounts at any time after this step.</string>
    <string name="save_and_begin">Save and Begin</string>
    <string name="add_initial_account">Add Initial Account</string>
    <string name="transaction_editor_title">Edit Transaction</string>
    <string name="selected_account_id">selected_account_id</string>
    <string name="preference_file_key">preference_file_key</string>
    <string name="default_account">Default Account</string>
    <string name="account_name">Account Name</string>
    <string name="account_starting_date">Account Starting Date</string>
    <string name="account_starting_balance">Account Starting Balance</string>
    <string name="enter_payee_name">Enter payee name</string>
    <string name="new_payee">New Payee</string>
    <string name="edit_payee">Edit Payee</string>
    <string name="delete_payee">Delete Payee</string>
    <string name="payee_name">Payee</string>
    <string name="nav_payees">Payees</string>
    <string name="title_payee_activity">Payees</string>
    <string name="title_payee_editor">Edit Payee</string>
    <string name="enter_or_select_default_category_for_payee">Enter or select default category for payee</string>
    <string name="default_category">Default Category</string>
    <string name="payee_editor_name">Payee Name</string>
</resources>