<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.tk.flashcheckbook.ui.home.HomeFragment"

            tools:layout="@layout/fragment_home" />

    <fragment
            android:id="@+id/nav_accounts"
            android:name="com.tk.flashcheckbook.ui.account.AccountFragment"
            android:label="@string/menu_account"
            tools:layout="@layout/fragment_accounts" />

    <fragment
            android:id="@+id/nav_payees"
            android:name="com.tk.flashcheckbook.ui.payee.PayeeFragment"
            android:label="@string/nav_payees"
            tools:layout="@layout/fragment_payees" />


    <fragment
            android:id="@+id/nav_settings"
            android:name="com.tk.flashcheckbook.ui.settings.SettingsFragment"
            android:label="@string/menu_settings"
            tools:layout="@layout/fragment_settings" />


</navigation>