<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_account_editor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/constraint_layout_margin"
        tools:context=".ui.account.AccountEditorActivity"
        android:id="@+id/nestedScrollView2">


    <EditText
            android:layout_width="@dimen/text_layout_width"
            android:layout_height="@dimen/text_layout_height"
            android:id="@+id/account_detail_name"
            android:hint="@string/enter_account_name"
            android:layout_marginBottom="@dimen/text_layout_marginBottom"

            app:layout_constraintBottom_toTopOf="@+id/account_detail_starting_date"
            app:layout_constraintLeft_toRightOf="@id/icon_account_name"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/text_layout_marginTop"
            app:backgroundTint="@color/black"




            />

    <EditText
            android:layout_width="@dimen/text_layout_width"
            android:layout_height="@dimen/text_layout_height"
            android:clickable="true"
            android:id="@+id/account_detail_starting_date"
            android:hint="@string/enter_account_starting_date"
            app:layout_constraintLeft_toRightOf="@id/icon_account_starting_date"
            app:layout_constraintTop_toBottomOf="@+id/account_detail_name"
            app:layout_constraintRight_toRightOf="parent"
            android:focusable="true"
            android:layout_marginTop="17dp"
            app:backgroundTint="@color/black"

            />

    <EditText
            android:layout_width="@dimen/text_layout_width"
            android:layout_height="@dimen/text_layout_height"
            android:inputType="numberDecimal"
            android:clickable="true"
            android:id="@+id/account_detail_starting_balance"

            android:hint="@string/enter_account_starting_balance"
            app:layout_constraintTop_toBottomOf="@+id/account_detail_starting_date"
            app:layout_constraintLeft_toRightOf="@id/icon_account_starting_balance"
            app:layout_constraintRight_toRightOf="parent"
            android:focusable="true"
            android:layout_marginTop="@dimen/text_layout_marginTop"
            app:backgroundTint="@color/black"
            />

    <Button
            android:text="@string/save_and_begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/account_save_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="100dp"
            />


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_account_balance_24"
            android:id="@+id/icon_account_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/account_detail_name"
            app:layout_constraintTop_toTopOf="@id/account_detail_name"
            app:layout_constraintTop_toBottomOf="@+id/icon_account_name"
            android:layout_marginTop="@dimen/image_layout_marginTop"
            android:layout_marginRight="@dimen/image_layout_marginRight"

            app:tint="@color/design_default_color_primary"

            />


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_calendar_today_24"
            android:id="@+id/icon_account_starting_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/account_detail_starting_date"
            app:layout_constraintTop_toTopOf="@id/account_detail_starting_date"
            app:layout_constraintTop_toBottomOf="@+id/icon_account_name"
            android:layout_marginTop="@dimen/image_layout_marginTop"
            android:layout_marginRight="@dimen/image_layout_marginRight"
            app:tint="@color/design_default_color_primary"




            />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_baseline_attach_money_24"
            android:id="@+id/icon_account_starting_balance"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/account_detail_starting_balance"
            app:layout_constraintTop_toTopOf="@id/account_detail_starting_balance"
            app:layout_constraintTop_toBottomOf="@+id/icon_account_name"
            android:layout_marginTop="@dimen/image_layout_marginTop"
            android:layout_marginRight="@dimen/image_layout_marginRight"
            app:tint="@color/design_default_color_primary"


            />



    <TextView
            android:text="@string/account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview_account_name"
            android:layout_marginLeft="@dimen/TextView_sub_left_margin"
            app:layout_constraintTop_toBottomOf="@+id/account_detail_name"
            app:layout_constraintLeft_toRightOf="@+id/icon_account_name"
            android:textSize="@dimen/TextView_sub_textSize"
            android:textColor="@color/design_default_color_primary"
            />

    <TextView
            android:text="@string/account_starting_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview_account_starting_date"
            android:layout_marginLeft="@dimen/TextView_sub_left_margin"
            app:layout_constraintTop_toBottomOf="@+id/account_detail_starting_date"
            app:layout_constraintLeft_toRightOf="@+id/icon_account_starting_date"
            android:textSize="@dimen/TextView_sub_textSize"
            android:textColor="@color/design_default_color_primary"
            />

    <TextView
            android:text="@string/account_starting_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview_account_starting_balance"
            android:layout_marginLeft="@dimen/TextView_sub_left_margin"
            app:layout_constraintTop_toBottomOf="@+id/account_detail_starting_balance"
            app:layout_constraintLeft_toRightOf="@+id/icon_account_starting_date"
            android:textSize="@dimen/TextView_sub_textSize"
            android:textColor="@color/design_default_color_primary"
            />


</androidx.constraintlayout.widget.ConstraintLayout>